tests/baselines/reference/commonJsExportTypeDeclarationError(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
types1.ts(2,17): error TS1110: Type expected.
types1.ts(3,1): error TS1005: '=' expected.
types2.ts(2,19): error TS1110: Type expected.
types3.ts(2,13): error TS2456: Type alias 'test' circularly references itself.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== ./test.js (0 errors) ====
    module.exports = {
       message: ""
    }
    
==== ./types1.ts (2 errors) ====
    import test from "./test";
    export type test
                    
!!! error TS1110: Type expected.
    
    
!!! error TS1005: '=' expected.
==== ./types2.ts (1 errors) ====
    import test from "./test";
    export type test = 
                      
!!! error TS1110: Type expected.
    
==== ./types3.ts (1 errors) ====
    import test from "./test";
    export type test = test;
                ~~~~
!!! error TS2456: Type alias 'test' circularly references itself.
    